Closed Bug 361532 Opened 18 years ago Closed 18 years ago

Cairo still incorrectly substitutes fonts and then bolds them incorrectly if you are not using Windows XP's default regional and language options on some sites.

Categories

(Core :: Graphics, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: JasnaPaka, Assigned: masayuki)

References

Details

Attachments

(3 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; cs; rv:1.8.1) Gecko/20061010 Firefox/2.0 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20061122 Minefield/3.0a1 This isn't dupe of bug #342143. On some sites there is still problem with incorrectly substitutes fonts. Problematic sites: * http://www.cdr.cz/ * http://aktualne.centrum.cz/ Reproducible: Always
Attached file Testcase
First font (Arial) i have installed but not second (Arial CE) and there is a problem for me.
Depends on: 352174
Both of Fx 2 and trunk displayed the same result for me. Please submit a screenshot. What result are you expected? What is an actual result?
I found bug 361529 that means current resolver for win doesn't work fine. Can you check the patch? # I cannot reproduce this too.
Probably bug 361529 will also fix this.
bug 361529 was fixed, please recheck the testcase with next nightly build.
I can reproduce this. Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20061122 Minefield/3.0a1 ID:2006112204 [cairo]
Status: UNCONFIRMED → NEW
Ever confirmed: true
(In reply to comment #6) > bug 361529 was fixed, please recheck the testcase with next nightly build. Same result with today build.
On WinXP-ja, this bug is not reproduced. What's your environment? Didn't install third-party fonts?
Looks like the "Webdings" is used for 'a'...
(In reply to comment #10) > Looks like the "Webdings" is used for 'a'... > It's instead of "Arial CE" Downloaded latest nightly build (rv:1.9a1) Gecko/20061123 Minefield/3.0a1) and no correction
It's a MARLET font...
(In reply to comment #9) > On WinXP-ja, this bug is not reproduced. What's your environment? > Didn't install third-party fonts? - Windows XP ENG with Czech regional and language options - no third-party fonts
Kimura-san found the cause of this bug. But we don't have good way for fixing it yet. I'll try to create the patch.
Assignee: nobody → masayuki
(In reply to comment #10) > Looks like the "Webdings" is used for 'a'... The font used varies from computer to computer. On his system, it's Marlett (the built-in font used to draw the X button on windows and such), on mine it's Code2000. These same fonts were incorrectly substituted in bug 330715 and bug 342143.
Attached patch Patch rv1.0 (obsolete) — Splinter Review
This patch may be fixes this bug. This patch generates the font alias table for FontSubstitute from registry. This patch is weak for changing the spec of Windows. But this registry information is written in MS TechNet. I think that the spec will not be changed easily. # http://www.microsoft.com/technet/prodtechnol/windows2000serv/reskit/regentry/11815.mspx?mfr=true
Attachment #246453 - Flags: review?(VYV03354)
Status: NEW → ASSIGNED
Attached patch Patch rv1.0.1Splinter Review
Oops, sorry. The previous patch doesn't have a header file.
Attachment #246453 - Attachment is obsolete: true
Attachment #246456 - Flags: review?(VYV03354)
Attachment #246453 - Flags: review?(VYV03354)
Soeey for question, but how to implement the patch, how to work it? Do I have to compile my own build of firefox, will be this error corrected in nightly builds?
Sorry for question, but how to implement the patch, how to work it? Do I have to compile my own build of firefox, will be this error corrected in nightly builds?
If you want the fix right now, you have to compile your own build of Firefox, instructions on how to do that are at http://developer.mozilla.org/en/docs/Build_Documentation The fix will most likely be made in the nightly builds as soon as someone can review the patch, so if you can wait until then you don't have to compile yourself.
Comment on attachment 246456 [details] [diff] [review] Patch rv1.0.1 > nsDataHashtable<nsStringHashKey, nsRefPtr<FontEntry> > mFonts; > nsDataHashtable<nsStringHashKey, nsRefPtr<FontEntry> > mFontAliases; >+ nsDataHashtable<nsStringHashKey, nsRefPtr<FontEntry> > mFontSubstitutes; Do you have to distinguish mFonts from others? Please ask a formal reviewer before you check in.
Attachment #246456 - Flags: review?(VYV03354) → review+
Comment on attachment 246456 [details] [diff] [review] Patch rv1.0.1 (In reply to comment #21) > (From update of attachment 246456 [details] [diff] [review] [edit]) > > nsDataHashtable<nsStringHashKey, nsRefPtr<FontEntry> > mFonts; > > nsDataHashtable<nsStringHashKey, nsRefPtr<FontEntry> > mFontAliases; > >+ nsDataHashtable<nsStringHashKey, nsRefPtr<FontEntry> > mFontSubstitutes; > Do you have to distinguish mFonts from others? First, thank you for your review and hard testing. mFonts only store the font list that is used by GetFontList. But mFontAliases and mFontSubstitutes are not used in different point at now, so, we can merge this two lists. I leave the judgment to formal reviewer, Stuart.
Attachment #246456 - Flags: review?(pavlov)
The patch also fixes bug 346503.
Blocks: 346503
*** Bug 346503 has been marked as a duplicate of this bug. ***
No longer blocks: 346503
Blocks: 352174
No longer depends on: 352174
Gecko/20061219 Minefield/3.0a2pre Bug still not repaired - any progress?
The patch is still being reviewed.
Summary: Cairo still incorrectly substitutes fonts and then bolds them incorrectly if you are not using Window XP's default regional and language options on some sites. → Cairo still incorrectly substitutes fonts and then bolds them incorrectly if you are not using Windows XP's default regional and language options on some sites.
Stuart: Would you hurry up to review for this? The patch has been attached one month ago... This bug blocks my work for Windows.
Attachment #246456 - Flags: review?(pavlov) → review+
Attachment #246456 - Flags: superreview+
Thank you, Stuart. checked-in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a2pre) Gecko/20070105 Minefield/3.0a2pre - can confirm that now all works fine. Thanks.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a2pre) Gecko/20070105 Minefield/3.0a2pre Where can I download it please? I want to test it, one more time.
(In reply to comment #30) > Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a2pre) Gecko/20070105 > Minefield/3.0a2pre Where can I download it please? I want to test it, one more > time. > http://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/fx-win32-tbox-trunk/ Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a2pre) Gecko/20070105 Minefield/3.0a2pre ID:2007010512 [cairo] verified/fixed
Status: RESOLVED → VERIFIED
Thank you, it works correctly!
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: