Bug 361532 Cairo still incorrectly substitutes fonts and then bolds them incorrectly if you are not using Windows XP's default regional and language options on some sites. r=VYV03354+pavlov